Fixed image overlapping and comment subnest in  hellopress.

--- a/public/wordpress/wp-content/themes/bytescrafter-hellopress/style.css
+++ b/public/wordpress/wp-content/themes/bytescrafter-hellopress/style.css
@@ -58,7 +58,6 @@ a:hover {
 p {
   margin: 0px 0px 15px;
   clear: both;
-  float: left;
 }
 
 blockquote {
@@ -109,6 +108,11 @@ h1, h2, h3, h4, h5, h6{
     font-weight: 700;
     margin:0;
     margin-bottom: 15px;
+}
+
+h1 strong, h2 strong, h3 strong, h4 strong, h5 strong, h6 strong{
+  float: left;
+  margin-bottom: 25px;
 }
 
 h1 {
@@ -250,6 +254,7 @@ ul, ol {
     padding    : 0;
     list-style : none;
     margin-bottom: 12px;
+    margin-left: 16px;
 }
 
 ol {
@@ -620,6 +625,7 @@ SOCIAL ICON
 }
 .short-info {
   margin-bottom: 20px;
+  padding: 0px 10px;
 }
 
 .short-info ul, .short-info ol {
@@ -5939,6 +5945,12 @@ Copyright (c) 2014 Daniel Eden
   margin-top: 5px;
 }
 
+.comment-reply-title small a{
+  font-size: 12px;
+  float: right;
+  text-transform: uppercase;
+}
+
 .hp-post-pagination {
   text-align: center;;
 } 
@@ -5990,3 +6002,37 @@ Copyright (c) 2014 Daniel Eden
     float: none;
 }
 } */
+
+.short-info p img {
+  margin: 20px 0;
+}
+
+.inner-wrapper-sticky {
+  margin-right: 20px;
+}
+
+.comment .reply {
+  text-align: center;
+}
+
+.comment .reply a {
+  padding: 10px 30px;
+  font-weight: 500;
+  color: #fff;
+  background-color: #008ecf;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  transition: .1s;
+}
+
+.comment .reply a:hover {
+  color: #fff;
+  background-color: #00547a;
+}
+
+#cancel-comment-reply-link {
+  font-weight: 500;
+  font-size: 14px;
+  color: #e83c3c;
+  padding-right: 12px;
+}
